platform/templates/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
    hostname: "*.ankur.theworkpc.com"
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    hostname: "*.ankur.theworkpc.com"
    tls:
      mode: Terminate
      certificateRefs:
      - name: gateway-tls
  - name: http-nested
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
    hostname: "*.devops.ankur.theworkpc.com"
  - name: https-nested
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    hostname: "*.devops.ankur.theworkpc.com"
    tls:
      mode: Terminate
      certificateRefs:
      - name: gateway-tls
