platform/templates/gateway/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: default
  hostnames:
  - "argocd.ankur.theworkpc.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo-route
  namespace: kargo
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: default
  hostnames:
  - "kargo.ankur.theworkpc.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kargo-api
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitops-dev-route
  namespace: gitops-dev
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: default
  hostnames:
  - "dev.devops.ankur.theworkpc.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gitops-app
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitops-stage-route
  namespace: gitops-stage
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: default
  hostnames:
  - "stage.devops.ankur.theworkpc.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gitops-app
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitops-prod-route
  namespace: gitops-prod
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: default
  hostnames:
  - "devops.ankur.theworkpc.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gitops-app
      port: 80
